@@ -1,0 +1,60 @@
+#view_total
+{view_head}
+<style>{css}</style>
+{beige}
+{main_head}
+{main_countrymin}
+{total_head}
+<div class="donor_budgets_wrap">
+	<table class="title">
+		<tr>
+			<td><img src="{art}activity_icon.png" alt="{activity_icon_alt_text}" width="40" height="40"/></td>
+			<td>{view_total_text}</td>
+		</tr>
+	</table>
+	<div class="donor_budgets">
+		<table class="activity">
+			{total_projects_datas}
+		</table>
+	</div>
+</div>
+{total_data_description}
+{main_datainvestigators}
+{view_tail}
+
+#total_data_description
+<div class="description_wrap">
+	<div class="description">
+		<span class="title">{total_data_description_title_text}</span>
+		<p>{total_data_description_text}</p>
+		<a class="read">{read_more_text}</a>
+	</div>
+</div>
+
+#total_projects_data
+<tr>
+	<td>{num}.</td>
+	<td>
+		<a href="#view=act&aid={aid}" title="{table_active_title_tip_text}">
+			{title}
+			<span>{view_donor_activites_reporting_text}</span>
+		</a>
+	</td>
+	<td title="{table_active_date_tip_text}">{date}</td>
+</tr>
+
+#total_head
+<div class="donors_head_wrap">
+	<div class="donors_icon_wrap">
+		<img src="{art}total_icon_big.png" alt="{money_title_icon_alt_text}" width="330" height="180"/>	
+	</div><div class="donors_peak_wrap">
+			<div class="donors_peak_space view"></div>
+			<div class="donors_peak view"></div>
+	</div><div class="donors_head_title_wrap">
+			<div class="donors_head_title view" style="">
+				<span class="stats_title view">{stats_total_text}</span>
+				<span class="stats_num view">{total_projects}</span>
+			</div>
+			<div class="donors_head_declare">{declare_title_donor_text}</div>
+		</div>
+</div>
