@@ -7,6 +7,7 @@ All font-sizes are in ems for scaling issues in screen resolutions
 Refactored code into modular pages
 Declarations are now in footer
 Added "Reported by reporting-org" to project titles in tables
+Added Active / Ended / Planned / Total / Publishers pages
 
 
 Development Portal (2014-03-28 shi)
